--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,6 +19,7 @@
     "@types/mdast": "^4.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/trusted-types": "^2.0.7",
     "autoprefixer": "^10.4.16",
     "builtin-modules": "^3.3.0",
     "cross-env": "^7.0.3",
